[project]
name = "PiStar-LastHeard-Telegram"
version = "0.1-beta.3"
description = "Telegram bot to monitor the last transmissions of a Pi-Star/WPSD gateway"
keywords = ["amateur-radio", "mmdvm", "pi-star", "wpsd"]
readme = "README.md"
license = "GPL-3.0-only AND BSD-3-Clause"
authors = [
  { name = "Luca", email = "61653175+iu2frl@users.noreply.github.com" },
  { name = "Hafizi Ruslan", email = "9w2lgx@mhrtech.my" },
]
maintainers = [{ name = "Hafizi Ruslan", email = "9w2lgx@mhrtech.my" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
]
requires-python = ">=3.13"
dependencies = [
  "humanize>=4.15.0",
  "python-dotenv>=1.2.1",
  "python-telegram-bot>=22.5",
]

[project.urls]
repository = "https://github.com/HafiziRuslan/PiStar-LastHeard-Telegram"
changelog = "https://github.com/HafiziRuslan/PiStar-LastHeard-Telegram/blob/master/CHANGELOG.md"
