[project]
name = "MMDVM-Last-Heard"
version = "0.1-beta.4"
description = "Telegram bot to monitor the last transmissions of a Pi-Star/WPSD gateway"
keywords = ["amateur-radio", "mmdvm", "pi-star", "wpsd"]
readme = "README.md"
license = "BSD-3-Clause"
authors = [
  { name = "Luca", email = "61653175+iu2frl@users.noreply.github.com" },
  { name = "Hafizi Ruslan", email = "9w2lgx@mhrtech.my" },
]
maintainers = [{ name = "Hafizi Ruslan", email = "9w2lgx@mhrtech.my" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
]
requires-python = ">=3.13"
dependencies = [
  "humanize>=4.15.0",
  "python-dotenv>=1.2.1",
  "python-telegram-bot>=22.5",
]

[project.urls]
repository = "https://github.com/HafiziRuslan/MMDVM-Last-Heard"
changelog = "https://github.com/HafiziRuslan/MMDVM-Last-Heard/blob/master/CHANGELOG.md"

[tool.ruff]
line-length = 150

[tool.ruff.analyze]
detect-string-imports = true

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true
line-ending = "lf"
skip-magic-trailing-comma = true

[tool.ruff.lint.isort]
combine-as-imports = true
default-section = "first-party"
force-single-line = true
